[package]
name = "wordle"
authors = ["Charles German <5donuts@protonmail.com>"]
description = "A 'Wordle' clone"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
once_cell = "1.1"
